@@ -3,20 +3,19 @@ package com.github.cjvogel1972.day3;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.IntUnaryOperator;
-import java.util.stream.Collectors;
 
 public class Diagnostics {
-    private List<DiagnosticEntry> entries;
+    private final List<DiagnosticEntry> entries;
 
     public Diagnostics(List<DiagnosticEntry> entries) {
         this.entries = entries;
     }
 
     public int computePowerConsumption() {
-        StringBuilder gamma = new StringBuilder();
-        StringBuilder epsilon = new StringBuilder();
-        for (int i = 0; i < getNumberOfBits(); i++) {
-            int maxCommonBit = maxCommonBit(i);
+        var gamma = new StringBuilder();
+        var epsilon = new StringBuilder();
+        for (var i = 0; i < getNumberOfBits(); i++) {
+            var maxCommonBit = maxCommonBit(i);
             if (maxCommonBit == 0) {
                 gamma.append("0");
                 epsilon.append("1");
@@ -26,8 +25,8 @@ public class Diagnostics {
             }
         }
 
-        int gammaValue = new DiagnosticEntry(gamma.toString()).getIntegerValue();
-        int epsilonValue = new DiagnosticEntry(epsilon.toString()).getIntegerValue();
+        var gammaValue = new DiagnosticEntry(gamma.toString()).getIntegerValue();
+        var epsilonValue = new DiagnosticEntry(epsilon.toString()).getIntegerValue();
 
         return gammaValue * epsilonValue;
     }
@@ -46,14 +45,14 @@ public class Diagnostics {
 
     private int computeRating(IntUnaryOperator determineKeepBit) {
         List<DiagnosticEntry> temp = new ArrayList<>(entries);
-        for (int i = 0; i < getNumberOfBits() && temp.size() > 1; i++) {
-            int maxCommonBit = maxCommonBit(temp, i);
+        for (var i = 0; i < getNumberOfBits() && temp.size() > 1; i++) {
+            var maxCommonBit = maxCommonBit(temp, i);
 
-            int keepBit = determineKeepBit.applyAsInt(maxCommonBit);
-            int index = i;
+            var keepBit = determineKeepBit.applyAsInt(maxCommonBit);
+            var index = i;
             temp = temp.stream()
                     .filter(number -> number.bit(index) == keepBit)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return temp.get(0).getIntegerValue();
@@ -76,11 +75,11 @@ public class Diagnostics {
     }
 
     private int maxCommonBit(List<DiagnosticEntry> temp, int bitIndex) {
-        long zeroCount = temp.stream()
+        var zeroCount = temp.stream()
                 .filter(code -> code.bit(bitIndex) == 0)
                 .count();
 
-        int result = -1;
+        var result = -1;
         if (zeroCount > (temp.size() / 2)) {
             result = 0;
         } else if (zeroCount < (temp.size() / 2)) {
