@@ -2,14 +2,11 @@ package com.github.cjvogel1972.day8;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class Day8 {
 
@@ -19,9 +16,9 @@ public class Day8 {
     }
 
     private static void part1() throws IOException {
-        List<String> data = readFile("input-files/day8.txt");
+        var data = readFile("input-files/day8.txt");
 
-        Integer sum = data.stream()
+        var sum = data.stream()
                 .map(line -> countOneFourSevenEights(splitWiringConfigFromNumbers(line)[1]))
                 .reduce(0, Integer::sum);
 
@@ -29,9 +26,9 @@ public class Day8 {
     }
 
     private static void part2() throws IOException {
-        List<String> data = readFile("input-files/day8.txt");
+        var data = readFile("input-files/day8.txt");
 
-        Long sum = data.stream()
+        var sum = data.stream()
                 .map(Day8::computeDisplayNumber)
                 .reduce(0L, Long::sum);
 
@@ -39,12 +36,12 @@ public class Day8 {
     }
 
     private static int countOneFourSevenEights(String wiring) {
-        int count = 0;
+        var count = 0;
 
-        String[] numbers = wiring.trim()
+        var numbers = wiring.trim()
                 .split("\\s+");
-        for (String number : numbers) {
-            int numberOfLitWires = number.length();
+        for (var number : numbers) {
+            var numberOfLitWires = number.length();
             if (numberOfLitWires == 2 || numberOfLitWires == 4 || numberOfLitWires == 3 || numberOfLitWires == 7) {
                 count++;
             }
@@ -54,24 +51,24 @@ public class Day8 {
     }
 
     private static long computeDisplayNumber(String line) {
-        String[] data = splitWiringConfigFromNumbers(line);
-        List<Wiring> wiringConfigs = solveWiringConfiguration(data[0]);
-        String[] digits = data[1].trim()
+        var data = splitWiringConfigFromNumbers(line);
+        var wiringConfigs = solveWiringConfiguration(data[0]);
+        var digits = data[1].trim()
                 .split("\\s+");
-        List<String> displayDigits = Arrays.asList(digits);
+        var displayDigits = Arrays.asList(digits);
 
-        Display display = new Display(displayDigits, wiringConfigs);
+        var display = new Display(displayDigits, wiringConfigs);
         return display.computeNumber();
     }
 
     private static List<Wiring> solveWiringConfiguration(String data) {
-        String[] configs = data.trim()
+        var configs = data.trim()
                 .split("\\s+");
-        List<Wiring> wiringConfigs = Arrays.stream(configs)
-                .map(config -> new Wiring(config))
-                .collect(Collectors.toList());
+        var wiringConfigs = Arrays.stream(configs)
+                .map(Wiring::new)
+                .toList();
 
-        Map<Integer, Wiring> numberToWiringMap = new HashMap<>();
+        var numberToWiringMap = new HashMap<Integer, Wiring>();
         solveOneTwoSevenEight(wiringConfigs, numberToWiringMap);
         solveThreeFiveSixNine(wiringConfigs, numberToWiringMap);
         solveZeroTwo(wiringConfigs, numberToWiringMap);
@@ -80,7 +77,7 @@ public class Day8 {
     }
 
     private static void solveOneTwoSevenEight(List<Wiring> wiringConfigs, Map<Integer, Wiring> numberToWiringMap) {
-        for (Wiring config : wiringConfigs) {
+        for (var config : wiringConfigs) {
             if (config.getNumberOfLitWires() == 2) {
                 config.setNumber(1);
                 numberToWiringMap.put(1, config);
@@ -101,11 +98,11 @@ public class Day8 {
         while (wiringConfigs.stream()
                 .filter(Wiring::hasNumber)
                 .count() != 8) {
-            for (Wiring config : wiringConfigs) {
+            for (var config : wiringConfigs) {
                 if (config.hasNumber()) {
                     continue;
                 }
-                List<Character> configWires = config.getSortedLitWires();
+                var configWires = config.getSortedLitWires();
                 if (checkForThree(config, numberToWiringMap, configWires)) {
                     config.setNumber(3);
                     numberToWiringMap.put(3, config);
@@ -125,11 +122,11 @@ public class Day8 {
 
     private static boolean checkForThree(Wiring configToCheck, Map<Integer, Wiring> numberToWiringMap,
                                          List<Character> configWires) {
-        boolean result = false;
+        var result = false;
 
         if (configToCheck.getNumberOfLitWires() == 5) {
-            Wiring sevenConfig = numberToWiringMap.get(7);
-            List<Character> sevenConfigWires = sevenConfig.getSortedLitWires();
+            var sevenConfig = numberToWiringMap.get(7);
+            var sevenConfigWires = sevenConfig.getSortedLitWires();
             if (configWires.containsAll(sevenConfigWires)) {
                 result = true;
             }
@@ -140,15 +137,15 @@ public class Day8 {
 
     private static boolean checkForFive(Wiring config, Map<Integer, Wiring> numberToWiringMap,
                                         List<Character> configWires) {
-        boolean result = false;
+        var result = false;
 
         if (config.getNumberOfLitWires() == 5) {
-            Wiring nineConfig = numberToWiringMap.get(9);
+            var nineConfig = numberToWiringMap.get(9);
             if (nineConfig != null) {
-                List<Character> nineConfigWires = nineConfig.getSortedLitWires();
-                List<Character> intersection = configWires.stream()
+                var nineConfigWires = nineConfig.getSortedLitWires();
+                var intersection = configWires.stream()
                         .filter(nineConfigWires::contains)
-                        .collect(Collectors.toList());
+                        .toList();
                 if (intersection.size() == nineConfig.getNumberOfLitWires() - 1) {
                     result = true;
                 }
@@ -160,11 +157,11 @@ public class Day8 {
 
     private static boolean checkForNine(Wiring config, Map<Integer, Wiring> numberToWiringMap,
                                         List<Character> configWires) {
-        boolean result = false;
+        var result = false;
 
         if (config.getNumberOfLitWires() == 6) {
-            Wiring fourConfig = numberToWiringMap.get(4);
-            List<Character> fourConfigWires = fourConfig.getSortedLitWires();
+            var fourConfig = numberToWiringMap.get(4);
+            var fourConfigWires = fourConfig.getSortedLitWires();
             if (configWires.containsAll(fourConfigWires)) {
                 result = true;
             }
@@ -175,14 +172,14 @@ public class Day8 {
 
     private static boolean checkForSix(Wiring config, Map<Integer, Wiring> numberToWiringMap,
                                        List<Character> configWires) {
-        boolean result = false;
+        var result = false;
 
         if (config.getNumberOfLitWires() == 6) {
-            Wiring oneConfig = numberToWiringMap.get(1);
-            List<Character> oneConfigWires = oneConfig.getSortedLitWires();
-            List<Character> intersection = configWires.stream()
+            var oneConfig = numberToWiringMap.get(1);
+            var oneConfigWires = oneConfig.getSortedLitWires();
+            var intersection = configWires.stream()
                     .filter(oneConfigWires::contains)
-                    .collect(Collectors.toList());
+                    .toList();
             if (intersection.size() == oneConfig.getNumberOfLitWires() - 1) {
                 result = true;
             }
@@ -192,7 +189,7 @@ public class Day8 {
     }
 
     private static void solveZeroTwo(List<Wiring> wiringConfigs, Map<Integer, Wiring> numberToWiringMap) {
-        for (Wiring config : wiringConfigs) {
+        for (var config : wiringConfigs) {
             if (config.hasNumber()) {
                 continue;
             }
@@ -211,10 +208,10 @@ public class Day8 {
     }
 
     private static List<String> readFile(String fileName) throws IOException {
-        Path path = Paths.get(fileName);
+        var path = Paths.get(fileName);
 
-        Stream<String> lines = Files.lines(path);
-        List<String> result = lines.collect(Collectors.toList());
+        var lines = Files.lines(path);
+        var result = lines.toList();
         lines.close();
 
         return result;
